modif name page & correctif contrast

--- a/style.css
+++ b/style.css
@@ -736,7 +736,7 @@
     }
     
     .white {
-        color: #FFFFFF!important;
+        color: black!important;
     }
     
     .portfolio-thumb {
@@ -775,12 +775,12 @@
     }
     
     .tc-white {
-        color: #F3976C!important;
+        color: white!important;
     }
     
     .btn-atomic-tangerine {
         background: #F3976C;
-        color: #FFFFFF!important;
+        color: black!important;
     }
     
     .btn-atomic-tangerine:hover {
